# fast-api-practice

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  models.py  pyproject.toml
myapp/versions/: c86c89ba2468_added_number_of_employees.py  cc97fc981f23_added_company_model.py
