[project]
name = "fun-with-fast-api"
version = "0.1.0"
description = "Having fun with FastAPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
]

[tool.ruff]
line-length = 100
lint.extend-select = ["PTH"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true